Protect API with jwt and correct swagger
