# routes/api.php
@@ -19,27 +19,27 @@ use Illuminate\Http\Request;
 
 Route::post('login', array('uses' => 'AuthenticateController@authenticate'));
 
-/**
- * Users routes
- */
-Route::resource('users', 'UserController', ['except' => [ 'create', 'edit' ]]);
+Route::group(['middleware' => ['jwt.auth']], function () {
+    /**
+     * Users routes
+     */
+    Route::resource('users', 'UserController', ['except' => [ 'create', 'edit' ]]);
 
-/**
- * Items routes
- */
-Route::get('items', 'ItemController@index');
+    /**
+     * Items routes
+     */
+    Route::get('items', 'ItemController@index');
 
-/**
- * Settles routes
- */
-Route::resource('settles', 'SettleController', ['except' => [ 'create', 'edit', 'delete' ]]);
+    /**
+     * Settles routes
+     */
+    Route::resource('settles', 'SettleController', ['except' => [ 'create', 'edit', 'delete' ]]);
 
-/**
- * Slips routes
- */
-Route::get('/slips/{slip}/items', 'SlipController@items');
-Route::post('/slips/{slip}/items/{item}', 'SlipController@itemsAdd');
-Route::delete('/slips/{slip}/items/{item}', 'SlipController@itemsRemove');
-Route::resource('slips', 'SlipController', ['except' => [ 'create', 'edit' ]]);
-
-Route::get('/bubu', 'SettleController@store');
+    /**
+     * Slips routes
+     */
+    Route::get('/slips/{slip}/items', 'SlipController@items');
+    Route::post('/slips/{slip}/items/{item}', 'SlipController@itemsAdd');
+    Route::delete('/slips/{slip}/items/{item}', 'SlipController@itemsRemove');
+    Route::resource('slips', 'SlipController', ['except' => [ 'create', 'edit' ]]);
+});
