# swagger.yaml
@@ -17,9 +17,29 @@ tags:
   - name: Settle
 schemes:
   - http
+  - https
+securityDefinitions:
+ Bearer:
+  description: |
+   For accessing the API a valid JWT token must be passed in all the queries in
+   the 'Authorization' header.
+
+
+   A valid JWT token is generated by the API and retourned as answer of a call
+   to the route /login giving a valid email & password.
+
+
+   The following syntax must be used in the 'Authorization' header :
+
+       Bearer: xxxxxx.yyyyyyy.zzzzzz
+  type: apiKey
+  name: Authorization
+  in: header
 paths:
   /slips:
     get:
+      security:
+        - Bearer: []
       tags:
         - Einkauf
       summary: Alle Einkaufszettel für den Token Benutzer
@@ -33,6 +53,8 @@ paths:
             items:
               $ref: '#/definitions/Slip'
     post:
+      security:
+        - Bearer: []
       tags:
         - Einkauf
       summary: Neuen Einkaufszettel hinzufügen
@@ -46,6 +68,8 @@ paths:
           description: Einkaufszettel erstellt
   '/slips/{id}':
     get:
+      security:
+        - Bearer: []
       tags:
         - Einkauf
       summary: Finde einen Einkaufszettel
@@ -68,6 +92,8 @@ paths:
         '404':
           description: Einkaufszettel nicht gefunden
     put:
+      security:
+        - Bearer: []
       tags:
         - Einkauf
       summary: Aktuallisiere einen Einkaufszettel
@@ -96,6 +122,8 @@ paths:
         '404':
           description: Einkaufszettel nicht gefunden
     delete:
+      security:
+        - Bearer: []
       tags:
         - Einkauf
       summary: Lösche einen Einkaufszettel
@@ -119,6 +147,8 @@ paths:
           description: Einkaufszettel nicht gefunden
   '/slips/{id}/items':
     get:
+      security:
+        - Bearer: []
       tags:
         - Einkauf
       summary: Finde einen Einkaufszettel
@@ -142,6 +172,8 @@ paths:
           description: Einkaufszettel nicht gefunden
   '/slips/{id}/items/{iid}':
     post:
+      security:
+        - Bearer: []
       tags:
         - Einkauf
       summary: Item dem Einkaufszettel hinzufügen
@@ -176,6 +208,8 @@ paths:
         '404':
           description: Einkaufszettel oder Item nicht gefunden
     delete:
+      security:
+        - Bearer: []
       tags:
         - Einkauf
       summary: Item dem Einkaufszettel entfernen
@@ -205,6 +239,8 @@ paths:
           description: Einkaufszettel oder Item nicht gefunden
   /users:
     get:
+      security:
+        - Bearer: []
       tags:
         - Benutzer
       summary: Alle Benutzer für den Token Benutzer
@@ -218,6 +254,8 @@ paths:
             items:
               $ref: '#/definitions/User'
     post:
+      security:
+        - Bearer: []
       tags:
         - Benutzer
       summary: Neuer Benutzer hinzufügen
@@ -238,6 +276,8 @@ paths:
           description: Invalid input
   '/users/{id}':
     get:
+      security:
+        - Bearer: []
       tags:
         - Benutzer
       summary: Finde einen Benutzer
@@ -260,6 +300,8 @@ paths:
         '404':
           description: Benutzer nicht gefunden
     delete:
+      security:
+        - Bearer: []
       tags:
         - Benutzer
       summary: Lösche einen Benutzer
@@ -309,6 +351,8 @@ paths:
             $ref: '#/definitions/Token'
   /items:
     get:
+      security:
+      - Bearer: []
       tags:
         - Items
       summary: Alle Items für den Token Benutzer
@@ -323,6 +367,8 @@ paths:
               $ref: '#/definitions/Item'
   /settles:
     get:
+      security:
+        - Bearer: []
       tags:
         - Settle
       summary: Alle Settles für den Token Benutzer
@@ -336,6 +382,8 @@ paths:
             items:
               $ref: '#/definitions/Settle'
     post:
+      security:
+        - Bearer: []
       tags:
         - Settle
       summary: Alle Einkaufszettel auf die Benutzer ausgleichen
@@ -350,6 +398,8 @@ paths:
               $ref: '#/definitions/Settle'
   '/settles/{id}':
     get:
+      security:
+        - Bearer: []
       tags:
         - Settle
       summary: Finde einen Settle
@@ -372,6 +422,8 @@ paths:
         '404':
           description: Settle nicht gefunden
     put:
+      security:
+        - Bearer: []
       tags:
         - Settle
       summary: Aktuallisiere einen Settle
@@ -399,11 +451,6 @@ paths:
           description: Falsche ID
         '404':
           description: Settle nicht gefunden
-securityDefinitions:
-  api_key:
-    type: apiKey
-    name: Authorization
-    in: header
 definitions:
   User:
     type: object
